union of 2 or more dataframes, add tests